log/build_2023-02-26_17-31-02/my_package/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ryanlin12/CSCE452_project2/install/my_package/lib/python3.10/site-packages/my_package/a_mlogo.py", line 31
    def turn_turtle(self, dist)):
                               ^
SyntaxError: unmatched ')'

